force-app/main/default/objects/ComfortQualityCall__c/ComfortQualityCall__c.object-meta.xml
<CustomObject>
    <description>Oggetto tecnico (matrice) per la gestione delle casistiche di Comfort e Quality call, tale oggetto sarà manutenuto dal Business</description>
    <label>Comfort e Quality Call</label>
    <nameField>
        <label>Comfort e Quality Call Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Comfort e Quality Call</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>