force-app/main/default/objects/ComfortQualityCall__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Conterrà tutti i canali soggetti a quality e a comfort</description>
    <label>Canale</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agenzie</fullName>
            </value>
            <value>
                <fullName>Agenzie SME</fullName>
            </value>
            <value>
                <fullName>Associazionii</fullName>
            </value>
            <value>
                <fullName>Back office</fullName>
            </value>
            <value>
                <fullName>Business Agent</fullName>
            </value>
            <value>
                <fullName>Consip</fullName>
            </value>
            <value>
                <fullName>HC Point</fullName>
            </value>
            <value>
                <fullName>Punti Hera</fullName>
            </value>
            <value>
                <fullName>Reseller</fullName>
            </value>
            <value>
                <fullName>Sportello</fullName>
            </value>
            <value>
                <fullName>Telefono</fullName>
            </value>
            <value>
                <fullName>Teleselling Inbound</fullName>
            </value>
            <value>
                <fullName>Teleselling Outbound</fullName>
            </value>
            <value>
                <fullName>Vendita Condomini</fullName>
            </value>
            <value>
                <fullName>Vendita TopBusiness</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>