force-app/main/default/objects/ComfortQualityCall__c/fields/ComfortCampaign__c.field-meta.xml
<CustomField>
    <fullName>ComfortCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicherà  le campagne relative alla quality call</description>
    <label>Campagna Comfort</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Comfort e Quality Call (Campagna Confort)</relationshipLabel>
    <relationshipName>ComfortCalls</relationshipName>
    <type>Lookup</type>
</CustomField>