force-app/main/default/objects/ComfortQualityCall__c/fields/ComfortDocSendingChannel__c.field-meta.xml
<CustomField>
    <fullName>ComfortDocSendingChannel__c</fullName>
    <description>Indichera la modalità di invio della confort call</description>
    <label>Canale invio plico documentale Comfort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SendMode</valueSetName>
    </valueSet>
</CustomField>