force-app/main/default/objects/ComfortQualityCall__c/fields/ComfortEnabled__c.field-meta.xml
<CustomField>
    <fullName>ComfortEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valorizzata su tutti i processi che prevedono la Comfort call abilitata</description>
    <label>Comfort abilitata</label>
    <type>Checkbox</type>
</CustomField>