force-app/main/default/objects/ComfortQualityCall__c/fields/ComfortSignatureMethod__c.field-meta.xml
<CustomField>
    <fullName>ComfortSignatureMethod__c</fullName>
    <description>contenere i metodi firma soggetti a Comfort Call</description>
    <label>Metodo firma Comfort</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SignMode</valueSetName>
    </valueSet>
</CustomField>