force-app/main/default/objects/ComfortQualityCall__c/fields/CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CustomerType__c</fullName>
    <description>Conterrà tutte le tipologie di clienti</description>
    <label>Tipologia cliente</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Piccoli Condomini</fullName>
            </value>
            <value>
                <fullName>Famiglie</fullName>
            </value>
            <value>
                <fullName>Azienda Soho</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>