force-app/main/default/objects/ComfortQualityCall__c/fields/DaysComfort__c.field-meta.xml
<CustomField>
    <fullName>DaysComfort__c</fullName>
    <description>Conterrà il numero di giorni entro quando andra effettuata la Comfort Call</description>
    <label>Giorni Comfort</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>