force-app/main/default/objects/ComfortQualityCall__c/fields/MarketType__c.field-meta.xml
<CustomField>
    <fullName>MarketType__c</fullName>
    <description>Indicherà il mercato per cui si rende necessario effettuare le comfort e le quality</description>
    <label>Tipologia Mercato</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_Market</valueSetName>
    </valueSet>
</CustomField>