force-app/main/default/objects/ComfortQualityCall__c/fields/Process__c.field-meta.xml
<CustomField>
    <fullName>Process__c</fullName>
    <description>conterrà tutti i processi soggetti a comfort e a quality</description>
    <label>Processo</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>HDT_RT_CambioOfferta</fullName>
            </value>
            <value>
                <fullName>HDT_RT_SwitchIn</fullName>
            </value>
            <value>
                <fullName>HDT_RT_Vas</fullName>
            </value>
            <value>
                <fullName>HDT_RT_Voltura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>