force-app/main/default/objects/ComfortQualityCall__c/fields/QualityCampaign__c.field-meta.xml
<CustomField>
    <fullName>QualityCampaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Indicherà  le campagne relative alla quality call</description>
    <label>Campagna Quality</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Comfort e Quality Call</relationshipLabel>
    <relationshipName>QualityCalls</relationshipName>
    <type>Lookup</type>
</CustomField>