force-app/main/default/objects/ComfortQualityCall__c/fields/QualityEnabled__c.field-meta.xml
<CustomField>
    <fullName>QualityEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Valorizzata su tutti i processi che prevedono la quality call abilitata</description>
    <label>Quality abilitata</label>
    <type>Checkbox</type>
</CustomField>