force-app/main/default/objects/ComfortQualityCall__c/fields/QualitySignatureMethod__c.field-meta.xml
<CustomField>
    <fullName>QualitySignatureMethod__c</fullName>
    <description>contenere i metodi firma soggetti a Quality Call</description>
    <label>Metodo firma Quality</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>HDT_SignMode</valueSetName>
    </valueSet>
</CustomField>