force-app/main/default/objects/ComfortQualityCall__c/fields/UniqueQuality__c.field-meta.xml
<CustomField>
    <fullName>UniqueQuality__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Flag che indica se la quality call deve essere unica per tutti gli ordini</description>
    <label>Quality Unica</label>
    <type>Checkbox</type>
</CustomField>