force-app/main/default/objects/ComfortQualityCall__c/listViews/All_Comfort_Quality_Call.listView-meta.xml
<ListView>
    <fullName>All_Comfort_Quality_Call</fullName>
    <columns>NAME</columns>
    <columns>ComfortCampaign__c</columns>
    <columns>Channel__c</columns>
    <columns>ComfortDocSendingChannel__c</columns>
    <columns>ComfortEnabled__c</columns>
    <columns>DaysComfort__c</columns>
    <columns>ComfortSignatureMethod__c</columns>
    <columns>QualitySignatureMethod__c</columns>
    <columns>Process__c</columns>
    <columns>CustomerType__c</columns>
    <columns>MarketType__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Channel__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Process__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CustomerType__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Comfort e Quality Call</label>
</ListView>